# YuEngine

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE
Apps/YuEngineHeadless/: Main.cpp
Apps/YuRuntimeVisualCameraTweenViewer/: Main.cpp
Samples/: README.md
Samples/AssetSmokeDemo/: CMakeLists.txt  README.md  RunAssetSmokeDemo.ps1
Samples/AssetSmokeDemo/Source/: L0EngineEvidence.cpp  L0EngineEvidence.h  L1VerticalSamplePrep.cpp  L1VerticalSamplePrep.h  Main.cpp
Samples/UiComponentSmoke/: README.md
Samples/UiCoreSmoke/: README.md
Temp/AssetSmokeDemo/: CMakeLists.txt  ReadMe.txt  RunAssetSmokeDemo.ps1
Temp/AssetSmokeDemo/Assets/Materials/: DemoMaterial.txt
Temp/AssetSmokeDemo/Assets/Textures/: Checker.tga
Temp/AssetSmokeDemo/Source/: Main.cpp
Tests/Animation/: AnimationRuntimeFoundationTests.cpp
Tests/AnimationEditor/: AnimationEditorSurfaceTests.cpp
Tests/AnimationWebEditorWeb/: AnimationWebEditorWebTests.js
Tests/Asset/: AssetManagerTests.cpp
Tests/Audio/: AudioHardwareSmokeTests.cpp  AudioTests.cpp
Tests/AudioResource/: AudioResourceTests.cpp
Tests/AudioScene/: AudioSceneContractQueueTests.cpp
Tests/Diagnostics/: DiagnosticsTests.cpp
Tests/EditorHost/: EditorHostSessionTests.cpp
Tests/EditorPackageRun/: EditorPackageRunSmokeTests.cpp
Tests/ExternalAuthoring/: ExternalAuthoringBridgeTests.cpp
Tests/File/: FileTests.cpp
Tests/Hardware/: HardwareFrameHostD3D11HardwareSmokeTests.cpp  HardwareFrameHostTests.cpp
Tests/Input/: InputHardwareSmokeTests.cpp  InputTests.cpp
Tests/Kernel/: KernelTests.cpp  LifecycleTestModule.h
Tests/Memory/: MemoryTests.cpp
Tests/Object/: ObjectTests.cpp
Tests/Package/: PackageTests.cpp
Tests/Platform/: PlatformTests.cpp
Tests/PreviewHost/: PreviewHostEditorViewportInteractionTests.cpp
Tests/RenderCore/: RenderCameraShaderConstantsTests.cpp  RenderCameraTests.cpp  RenderCoreTests.cpp  RenderDrawPacketTests.cpp  RenderDrawableFramePipelineD3D11HardwareSmokeTests.cpp  RenderDrawableFramePipelineTests.cpp  RenderGraphExecutionPlanTests.cpp  RenderGraphSkeletonTests.cpp  RenderMaterialTests.cpp  RenderShaderProgramTests.cpp  RenderSwapchainFramePipelineD3D11HardwareSmokeTests.cpp  RenderSwapchainFramePipelineTests.cpp  RenderViewPacketTests.cpp
Tests/RenderScene/: RenderSceneContractQueueTests.cpp  RenderSceneRuntimeVisualFoundationTests.cpp  RuntimeAssetDataClosedLoopTests.cpp
Tests/Resource/: ResourceTests.cpp
Tests/ResourceBrowser/: ResourceBrowserDiagnosticsTests.cpp
Tests/Rhi/: RhiD3D11HardwareSmokeTests.cpp  RhiTests.cpp
Tests/RuntimeAssetWorldAdapter/: RuntimeAssetWorldObjectAdapterBridgeTest.cpp  RuntimeAssetWorldObjectAuthoringRuntimeExportHandoffFixtureTest.cpp  RuntimeAssetWorldObjectDataHandoffFixtureTest.cpp  RuntimeAssetWorldObjectRecordStreamHandoffFixtureTest.cpp  RuntimeAssetWorldObjectRestoreHandoffBridgeTest.cpp
Tests/Sample/: L1VerticalSamplePrepTests.cpp
Tests/SceneEditor/: SceneEditorSurfaceTests.cpp
Tests/SceneWebEditorWeb/: SceneWebEditorWebTests.js
Tests/Script/: ScriptTests.cpp
Tests/Serialize/: SerializeTests.cpp  StreamFixture.h
Tests/Streaming/: ResourceDecodedTextureBridgeTests.cpp  StreamingTests.cpp
Tests/Thread/: FixedTraceBuffer.h  ThreadTestContext.cpp  ThreadTestContext.h  ThreadTests.cpp
Tests/UiComponentSmoke/: UiComponentSmokeSampleTests.cpp
Tests/UiCore/: UiButtonComponentTests.cpp  UiCoreTests.cpp  UiDrawBatcherTests.cpp  UiDynamicAtlasTests.cpp  UiFileSchemaValidatorTests.cpp  UiFontGlyphAtlasTests.cpp  UiGridViewSemanticsTests.cpp  UiGridViewVirtualizerTests.cpp  UiImageComponentTests.cpp  UiSliderComponentTests.cpp  UiTextComponentTests.cpp
Tests/UiCoreSmoke/: UiCoreSmokeSampleTests.cpp
Tests/UiEditor/: UiEditorComponentTemplateTests.cpp  UiEditorGridViewDataSimulationTests.cpp  UiEditorIdEventValidatorTests.cpp  UiEditorResourceReferenceValidatorTests.cpp  UiEditorStatePreviewTests.cpp  UiEditorSurfaceTests.cpp  UiEditorTests.cpp
Tests/UiRenderCoreBridge/: UiRenderCoreBridgeTests.cpp
Tests/UiRuntime/: BaseUiControllerTests.cpp  UiFullscreenRepresentativeTests.cpp  UiGridViewRepresentativeTests.cpp  UiManagerFullscreenStackTests.cpp  UiManagerLayerModelTests.cpp  UiManagerPanelMapTests.cpp  UiManagerPopupStackTests.cpp  UiPanelParameterTests.cpp  UiPanelRegistryTests.cpp  UiProjectRuntimeSmokeSampleTests.cpp  UiSimplePopupToastRepresentativeTests.cpp
Tests/UiWebEditorComponentTemplate/: UiWebEditorComponentTemplateDataTests.cpp
Tools/: README.md  RunFocusedTests.ps1
docs/: API_SURFACE_STATUS.md  BACKEND_DEVICE_ADAPTER_STATUS.md  BACKEND_DEVICE_CREATION_STATUS.md  BACKEND_EXECUTOR_STATUS.md  BACKEND_FONT_ATLAS_STATUS.md  BACKEND_MATERIAL_PROGRAM_BINARY_DISPATCH_STATUS.md  BACKEND_MATERIAL_PROGRAM_BINARY_FUNCTION_STATUS.md  BACKEND_MATERIAL_PROGRAM_BINARY_STATUS.md  BACKEND_MATERIAL_PROGRAM_STATUS.md  BACKEND_OBLIGATIONS_STATUS.md  BACKEND_PROGRAM_DEPTH_FONT_STATUS.md  BACKEND_RESOURCE_CREATION_STATUS.md  BACKEND_SHADER_SAMPLER_STATUS.md  BACKEND_STATE_STATUS.md  BACKEND_SURFACE_MATERIAL_FONT_STATUS.md  BACKEND_UPLOAD_BINDING_STATUS.md  DEVICE_EXECUTION_STATUS.md  DEVICE_PRESENTATION_STATUS.md  ENGINE_RECONSTRUCTION_MASTER_PLAN.md  FIRST_FRAME_RUNTIME_STATUS.md  FIRST_MISSION_EVENT_THREAD_STATUS.md  FIRST_MISSION_TUTORIAL_STATUS.md  FRAME_SCHEDULER_STATUS.md  GAMEPLAY_FRAME_RUNTIME_STATUS.md  IMPORT_AUDIT.md  LOOP_TASKS.md  MATERIAL_SEMANTICS_STATUS.md  NATIVE_BOUNDARY_SPEC_STATUS.md  NATIVE_SERVICE_INTERFACES_STATUS.md  ORACLE_CAPTURE_EXECUTION_STATUS.md  ORACLE_TITLE_BOOT_STATUS.md  PLATFORM_BRIDGE_STATUS.md  PRESENTATION_ORACLE_STATUS.md  PROJECT_MANIFEST_STATUS.md  README.md  RENDERER_BACKEND_SUBMISSION_STATUS.md  RESOURCE_ALLOCATION_STATUS.md  RUNTIME_SPINE_STATUS.md  SCENE_ENTRY_RUNTIME_STATUS.md  SCENE_RUNTIME_MATERIALIZATION_STATUS.md  (+80 more)
tests/: test_api_surface.py  test_native_spec.py  test_oracle_title_boot.py  test_project_manifest.py  test_sqir.py
tools/: api_surface.py  native_spec.py  oracle_title_boot.py  project_manifest.py  sqir.py  verify_runtime.ps1
(+1630 files in other folders)
