cmake_minimum_required(VERSION 3.24)

project(YuEngine LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

function(yuengine_apply_compile_options target_name)
    target_compile_features(${target_name} PUBLIC cxx_std_20)

    if(MSVC)
        target_compile_options(${target_name} PRIVATE /W4 /permissive-)
        return()
    endif()

    target_compile_options(${target_name} PRIVATE -Wall -Wextra -Wpedantic)
endfunction()

add_library(YuMemory
    src/yuengine/memory/src/CountingMemoryTracker.cpp
    src/yuengine/memory/src/DisabledMemoryTracker.cpp
)
yuengine_apply_compile_options(YuMemory)
target_include_directories(YuMemory
    PUBLIC
        src/yuengine/memory/include
)

add_library(YuDiagnostics
    src/yuengine/diagnostics/src/BoundedDiagnosticsChannel.cpp
    src/yuengine/diagnostics/src/BoundedInMemoryLogSink.cpp
    src/yuengine/diagnostics/src/DefaultLogSink.cpp
    src/yuengine/diagnostics/src/DisabledDiagnosticsChannel.cpp
    src/yuengine/diagnostics/src/DisabledLogSink.cpp
)
yuengine_apply_compile_options(YuDiagnostics)
target_include_directories(YuDiagnostics
    PUBLIC
        src/yuengine/diagnostics/include
)
target_link_libraries(YuDiagnostics PUBLIC YuMemory)

add_library(YuThread
    src/yuengine/thread/src/BoundedTaskQueue.cpp
    src/yuengine/thread/src/InlineTaskExecutor.cpp
)
yuengine_apply_compile_options(YuThread)
target_include_directories(YuThread
    PUBLIC
        src/yuengine/thread/include
)
target_link_libraries(YuThread PUBLIC YuMemory)

add_library(YuFile
    src/yuengine/file/src/FileReadResult.cpp
    src/yuengine/file/src/LooseFileSource.cpp
    src/yuengine/file/src/MountId.cpp
    src/yuengine/file/src/MountPoint.cpp
    src/yuengine/file/src/MountTable.cpp
    src/yuengine/file/src/NormalizedPath.cpp
    src/yuengine/file/src/PathNormalizationResult.cpp
    src/yuengine/file/src/VirtualPath.cpp
)
yuengine_apply_compile_options(YuFile)
target_include_directories(YuFile
    PUBLIC
        src/yuengine/file/include
)

add_library(YuRHI
    src/yuengine/rhi/src/NullRhiDevice.cpp
    src/yuengine/rhi/src/RhiCommandList.cpp
)
yuengine_apply_compile_options(YuRHI)
target_include_directories(YuRHI
    PUBLIC
        src/yuengine/rhi/include
)

add_library(YuAudio
    src/yuengine/audio/src/TestAudioDevice.cpp
)
yuengine_apply_compile_options(YuAudio)
target_include_directories(YuAudio
    PUBLIC
        src/yuengine/audio/include
)

add_library(YuResource
    src/yuengine/resource/src/ResourceLogicalKey.cpp
    src/yuengine/resource/src/ResourceRegistry.cpp
)
yuengine_apply_compile_options(YuResource)
target_include_directories(YuResource
    PUBLIC
        src/yuengine/resource/include
)
target_link_libraries(YuResource PUBLIC YuMemory)

add_library(YuPackage
    src/yuengine/package/src/PackageLoadPlanResult.cpp
    src/yuengine/package/src/PackageRegistrationResult.cpp
    src/yuengine/package/src/PackageRegistry.cpp
    src/yuengine/package/src/PackageSourceKey.cpp
)
yuengine_apply_compile_options(YuPackage)
target_include_directories(YuPackage
    PUBLIC
        src/yuengine/package/include
)
target_link_libraries(YuPackage PUBLIC YuMemory YuResource)

add_library(YuInput
    src/yuengine/input/src/InputReplay.cpp
)
yuengine_apply_compile_options(YuInput)
target_include_directories(YuInput
    PUBLIC
        src/yuengine/input/include
)

add_library(YuPlatform
    src/yuengine/platform/src/FixedFrameClock.cpp
    src/yuengine/platform/src/HeadlessHost.cpp
    src/yuengine/platform/src/HostError.cpp
)
yuengine_apply_compile_options(YuPlatform)
target_include_directories(YuPlatform
    PUBLIC
        src/yuengine/platform/include
)
target_link_libraries(YuPlatform PUBLIC YuDiagnostics YuMemory)

add_library(YuKernel
    src/yuengine/kernel/src/EngineKernel.cpp
    src/yuengine/kernel/src/KernelHostRuntime.cpp
    src/yuengine/kernel/src/KernelResult.cpp
    src/yuengine/kernel/src/ServiceRegistry.cpp
)
yuengine_apply_compile_options(YuKernel)
target_include_directories(YuKernel
    PUBLIC
        src/yuengine/kernel/include
)
target_link_libraries(YuKernel PUBLIC YuPlatform)

add_executable(YuHeadless
    apps/yuengine_headless/main.cpp
)
yuengine_apply_compile_options(YuHeadless)
target_link_libraries(YuHeadless PRIVATE YuKernel)

enable_testing()

add_executable(YuPlatformTests
    tests/platform/PlatformTests.cpp
)
yuengine_apply_compile_options(YuPlatformTests)
target_link_libraries(YuPlatformTests PRIVATE YuPlatform)
add_test(NAME Host_StartTickShutdown_Deterministic COMMAND YuPlatformTests Host_StartTickShutdown_Deterministic)
add_test(NAME Host_TimerMonotonic_ForFixedTicks COMMAND YuPlatformTests Host_TimerMonotonic_ForFixedTicks)
add_test(NAME Platform_AllocationAccountingStatus_UsesMemoryHook COMMAND YuPlatformTests Platform_AllocationAccountingStatus_UsesMemoryHook)

add_executable(YuDiagnosticsTests
    tests/diagnostics/DiagnosticsTests.cpp
)
yuengine_apply_compile_options(YuDiagnosticsTests)
target_link_libraries(YuDiagnosticsTests PRIVATE YuPlatform)
add_test(NAME Logging_DisabledSink_DoesNotChangeBehavior COMMAND YuDiagnosticsTests Logging_DisabledSink_DoesNotChangeBehavior)
add_test(NAME Diagnostics_DisabledChannel_DoesNotChangeBehavior COMMAND YuDiagnosticsTests Diagnostics_DisabledChannel_DoesNotChangeBehavior)
add_test(NAME Diagnostics_BoundedChannel_RecordsEventsAndCounters COMMAND YuDiagnosticsTests Diagnostics_BoundedChannel_RecordsEventsAndCounters)
add_test(NAME Diagnostics_BoundedChannel_DropsWhenFull COMMAND YuDiagnosticsTests Diagnostics_BoundedChannel_DropsWhenFull)
add_test(NAME Diagnostics_ChannelSnapshot_ReportsAcceptedDroppedAndCounters COMMAND YuDiagnosticsTests Diagnostics_ChannelSnapshot_ReportsAcceptedDroppedAndCounters)
add_test(NAME Diagnostics_ChannelStopped_DoesNotMutateAfterShutdown COMMAND YuDiagnosticsTests Diagnostics_ChannelStopped_DoesNotMutateAfterShutdown)
add_test(NAME Diagnostics_ChannelRejectsUnknownIds_WhenValidationEnabled COMMAND YuDiagnosticsTests Diagnostics_ChannelRejectsUnknownIds_WhenValidationEnabled)
add_test(NAME Diagnostics_CounterOverflow_ReturnsExplicitStatusAndDoesNotMutate COMMAND YuDiagnosticsTests Diagnostics_CounterOverflow_ReturnsExplicitStatusAndDoesNotMutate)
add_test(NAME Diagnostics_NoReportDependency_ForRuntimeResults COMMAND YuDiagnosticsTests Diagnostics_NoReportDependency_ForRuntimeResults)
add_test(NAME Diagnostics_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuDiagnosticsTests Diagnostics_NoHiddenAllocation_UsesYuMemorySignal)

add_executable(YuKernelTests
    tests/kernel/KernelTests.cpp
)
yuengine_apply_compile_options(YuKernelTests)
target_link_libraries(YuKernelTests PRIVATE YuKernel)
add_test(NAME Kernel_ModuleLifecycle_DependencyOrder COMMAND YuKernelTests Kernel_ModuleLifecycle_DependencyOrder)
add_test(NAME Kernel_ModuleStartupFailure_TearsDownStartedModules COMMAND YuKernelTests Kernel_ModuleStartupFailure_TearsDownStartedModules)
add_test(NAME Kernel_ServiceRegistry_ResolveAndMissingService COMMAND YuKernelTests Kernel_ServiceRegistry_ResolveAndMissingService)

add_executable(YuMemoryTests
    tests/memory/MemoryTests.cpp
)
yuengine_apply_compile_options(YuMemoryTests)
target_link_libraries(YuMemoryTests PRIVATE YuMemory)
add_test(NAME Memory_TrackerCountsAllocationAndFree COMMAND YuMemoryTests Memory_TrackerCountsAllocationAndFree)
add_test(NAME Memory_TrackerReportsPeakAndRetainedBytes COMMAND YuMemoryTests Memory_TrackerReportsPeakAndRetainedBytes)
add_test(NAME Memory_TrackerReportsLeakOnUnreleasedBytes COMMAND YuMemoryTests Memory_TrackerReportsLeakOnUnreleasedBytes)
add_test(NAME Memory_TrackerRejectsUnmatchedFree COMMAND YuMemoryTests Memory_TrackerRejectsUnmatchedFree)
add_test(NAME Memory_TrackerRecordsBudgetClass COMMAND YuMemoryTests Memory_TrackerRecordsBudgetClass)
add_test(NAME Memory_DisabledTracker_DoesNotChangeBehavior COMMAND YuMemoryTests Memory_DisabledTracker_DoesNotChangeBehavior)
add_test(NAME Memory_HotPathBudget_FailsOnTrackedAllocation COMMAND YuMemoryTests Memory_HotPathBudget_FailsOnTrackedAllocation)

add_executable(YuThreadTests
    tests/thread/ThreadTestContext.cpp
    tests/thread/ThreadTests.cpp
)
yuengine_apply_compile_options(YuThreadTests)
target_link_libraries(YuThreadTests PRIVATE YuThread)
add_test(NAME Thread_QueueEnqueueWithinCapacity_Succeeds COMMAND YuThreadTests Thread_QueueEnqueueWithinCapacity_Succeeds)
add_test(NAME Thread_QueueEnqueueBeyondCapacity_Rejects COMMAND YuThreadTests Thread_QueueEnqueueBeyondCapacity_Rejects)
add_test(NAME Thread_DrainExecutesTasks_InDeterministicOrder COMMAND YuThreadTests Thread_DrainExecutesTasks_InDeterministicOrder)
add_test(NAME Thread_TaskFailure_ReturnsFailedResult COMMAND YuThreadTests Thread_TaskFailure_ReturnsFailedResult)
add_test(NAME Thread_ShutdownRejectsNewSubmission COMMAND YuThreadTests Thread_ShutdownRejectsNewSubmission)
add_test(NAME Thread_ShutdownDrainPolicy_ExecutesQueuedTasks COMMAND YuThreadTests Thread_ShutdownDrainPolicy_ExecutesQueuedTasks)
add_test(NAME Thread_ShutdownCancelPolicy_CancelsQueuedTasks COMMAND YuThreadTests Thread_ShutdownCancelPolicy_CancelsQueuedTasks)
add_test(NAME Thread_QueueCapacity_DoesNotGrowDuringFixture COMMAND YuThreadTests Thread_QueueCapacity_DoesNotGrowDuringFixture)
add_test(NAME Thread_DiagnosticsDisabled_DoesNotChangeBehavior COMMAND YuThreadTests Thread_DiagnosticsDisabled_DoesNotChangeBehavior)

add_executable(YuFileTests
    tests/file/FileTests.cpp
)
yuengine_apply_compile_options(YuFileTests)
target_link_libraries(YuFileTests PRIVATE YuFile)
target_compile_definitions(YuFileTests PRIVATE YUENGINE_FILE_FIXTURE_ROOT="${CMAKE_CURRENT_SOURCE_DIR}/tests/fixtures/file")
add_test(NAME File_PathNormalize_RemovesDotAndRepeatedSeparators COMMAND YuFileTests File_PathNormalize_RemovesDotAndRepeatedSeparators)
add_test(NAME File_PathNormalize_RejectsTraversalOutsideRoot COMMAND YuFileTests File_PathNormalize_RejectsTraversalOutsideRoot)
add_test(NAME File_PathNormalize_RejectsEmptyAndAbsolutePath COMMAND YuFileTests File_PathNormalize_RejectsEmptyAndAbsolutePath)
add_test(NAME File_MountTable_RejectsDuplicateMount COMMAND YuFileTests File_MountTable_RejectsDuplicateMount)
add_test(NAME File_MountTable_UsesDeterministicPriorityOrder COMMAND YuFileTests File_MountTable_UsesDeterministicPriorityOrder)
add_test(NAME File_MountTable_ReportsMissingMountOrFile COMMAND YuFileTests File_MountTable_ReportsMissingMountOrFile)
add_test(NAME File_LooseFixtureRead_ReturnsExactBytes COMMAND YuFileTests File_LooseFixtureRead_ReturnsExactBytes)
add_test(NAME File_LooseFileSourceRejectsForgedNormalizedPathEscape COMMAND YuFileTests File_LooseFileSourceRejectsForgedNormalizedPathEscape)
add_test(NAME File_ReadSnapshot_RecordsCountsAndBytes COMMAND YuFileTests File_ReadSnapshot_RecordsCountsAndBytes)
add_test(NAME File_DiagnosticsDisabled_DoesNotChangeBehavior COMMAND YuFileTests File_DiagnosticsDisabled_DoesNotChangeBehavior)

add_executable(YuRHITests
    tests/rhi/RhiTests.cpp
)
yuengine_apply_compile_options(YuRHITests)
target_link_libraries(YuRHITests PRIVATE YuRHI)
add_test(NAME RHI_CreateNullDevice_ReturnsCapabilities COMMAND YuRHITests RHI_CreateNullDevice_ReturnsCapabilities)
add_test(NAME RHI_CreateDevice_RejectsUnsupportedBackend COMMAND YuRHITests RHI_CreateDevice_RejectsUnsupportedBackend)
add_test(NAME RHI_CreateTarget_ReturnsGenerationHandle COMMAND YuRHITests RHI_CreateTarget_ReturnsGenerationHandle)
add_test(NAME RHI_CreateColorTarget_ReturnsGenerationHandle COMMAND YuRHITests RHI_CreateColorTarget_ReturnsGenerationHandle)
add_test(NAME RHI_CreateColorTarget_RejectsInvalidDescriptor COMMAND YuRHITests RHI_CreateColorTarget_RejectsInvalidDescriptor)
add_test(NAME RHI_TargetCapacityOverflow_DoesNotMutate COMMAND YuRHITests RHI_TargetCapacityOverflow_DoesNotMutate)
add_test(NAME RHI_DestroyTarget_InvalidatesStaleHandle COMMAND YuRHITests RHI_DestroyTarget_InvalidatesStaleHandle)
add_test(NAME RHI_CommandList_RecordsClearWithinCapacity COMMAND YuRHITests RHI_CommandList_RecordsClearWithinCapacity)
add_test(NAME RHI_CommandListCapacityOverflow_DoesNotMutate COMMAND YuRHITests RHI_CommandListCapacityOverflow_DoesNotMutate)
add_test(NAME RHI_SubmitRejectsOversizedCommandListWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsOversizedCommandListWithoutMutation)
add_test(NAME RHI_RecordClear_RejectsInvalidTargetHandle COMMAND YuRHITests RHI_RecordClear_RejectsInvalidTargetHandle)
add_test(NAME RHI_SubmitRejectsIncompleteCommandListWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsIncompleteCommandListWithoutMutation)
add_test(NAME RHI_SubmitRejectsMismatchedRecordedTargetWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsMismatchedRecordedTargetWithoutMutation)
add_test(NAME RHI_SubmitRejectsStaleRecordedTargetWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsStaleRecordedTargetWithoutMutation)
add_test(NAME RHI_SubmitExecutesClearIntoNullTarget COMMAND YuRHITests RHI_SubmitExecutesClearIntoNullTarget)
add_test(NAME RHI_PresentRequiresSuccessfulSubmit COMMAND YuRHITests RHI_PresentRequiresSuccessfulSubmit)
add_test(NAME RHI_ClearSubmitPresent_UpdatesPresentedCounter COMMAND YuRHITests RHI_ClearSubmitPresent_UpdatesPresentedCounter)
add_test(NAME RHI_CaptureBeforePresent_ReturnsExplicitStatus COMMAND YuRHITests RHI_CaptureBeforePresent_ReturnsExplicitStatus)
add_test(NAME RHI_ClearColor_UsesExactRgba8ByteChannels COMMAND YuRHITests RHI_ClearColor_UsesExactRgba8ByteChannels)
add_test(NAME RHI_CapturePresentedTarget_WritesDeterministicRgba8Bytes COMMAND YuRHITests RHI_CapturePresentedTarget_WritesDeterministicRgba8Bytes)
add_test(NAME RHI_CaptureRejectsUndersizedBufferWithoutWritingBytes COMMAND YuRHITests RHI_CaptureRejectsUndersizedBufferWithoutWritingBytes)
add_test(NAME RHI_FrameSubmitPresentCapture_DoesNotGrowCommandStorage COMMAND YuRHITests RHI_FrameSubmitPresentCapture_DoesNotGrowCommandStorage)
add_test(NAME RHI_DisabledDiagnosticsDoesNotChangeResults COMMAND YuRHITests RHI_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME RHI_NoResourceFileUploadShaderUiDependency COMMAND YuRHITests RHI_NoResourceFileUploadShaderUiDependency)

add_executable(YuAudioTests
    tests/audio/AudioTests.cpp
)
yuengine_apply_compile_options(YuAudioTests)
target_link_libraries(YuAudioTests PRIVATE YuAudio)
add_test(NAME Audio_CreateTestDevice_ReturnsCapabilities COMMAND YuAudioTests Audio_CreateTestDevice_ReturnsCapabilities)
add_test(NAME Audio_CreateDevice_RejectsUnsupportedBackend COMMAND YuAudioTests Audio_CreateDevice_RejectsUnsupportedBackend)
add_test(NAME Audio_CreateDevice_RejectsUnsupportedFormat COMMAND YuAudioTests Audio_CreateDevice_RejectsUnsupportedFormat)
add_test(NAME Audio_RegisterSyntheticSource_ReturnsStableId COMMAND YuAudioTests Audio_RegisterSyntheticSource_ReturnsStableId)
add_test(NAME Audio_SourceCapacityOverflow_DoesNotMutate COMMAND YuAudioTests Audio_SourceCapacityOverflow_DoesNotMutate)
add_test(NAME Audio_StartVoice_ReturnsGenerationHandle COMMAND YuAudioTests Audio_StartVoice_ReturnsGenerationHandle)
add_test(NAME Audio_StartVoice_RejectsMissingSource COMMAND YuAudioTests Audio_StartVoice_RejectsMissingSource)
add_test(NAME Audio_StartVoice_RejectsInvalidGainWithoutMutation COMMAND YuAudioTests Audio_StartVoice_RejectsInvalidGainWithoutMutation)
add_test(NAME Audio_VoiceCapacityOverflow_DoesNotMutate COMMAND YuAudioTests Audio_VoiceCapacityOverflow_DoesNotMutate)
add_test(NAME Audio_StopVoice_InvalidatesStaleHandle COMMAND YuAudioTests Audio_StopVoice_InvalidatesStaleHandle)
add_test(NAME Audio_MixSingleVoice_WritesDeterministicS16StereoSamples COMMAND YuAudioTests Audio_MixSingleVoice_WritesDeterministicS16StereoSamples)
add_test(NAME Audio_MixUnityGain_PreservesS16EdgeSamples COMMAND YuAudioTests Audio_MixUnityGain_PreservesS16EdgeSamples)
add_test(NAME Audio_MixFractionalGain_RoundsTowardZeroDeterministically COMMAND YuAudioTests Audio_MixFractionalGain_RoundsTowardZeroDeterministically)
add_test(NAME Audio_MixMultipleVoices_UsesStableOrderAndSaturates COMMAND YuAudioTests Audio_MixMultipleVoices_UsesStableOrderAndSaturates)
add_test(NAME Audio_MixMaxVoicesFullScaleSaturatesWithoutOverflow COMMAND YuAudioTests Audio_MixMaxVoicesFullScaleSaturatesWithoutOverflow)
add_test(NAME Audio_MixStopsVoiceAtEndOfSource COMMAND YuAudioTests Audio_MixStopsVoiceAtEndOfSource)
add_test(NAME Audio_MixEndedVoice_WritesSilentTail COMMAND YuAudioTests Audio_MixEndedVoice_WritesSilentTail)
add_test(NAME Audio_MixOverwritesPrefilledDestination COMMAND YuAudioTests Audio_MixOverwritesPrefilledDestination)
add_test(NAME Audio_MixRejectsUndersizedBufferWithoutWritingSamples COMMAND YuAudioTests Audio_MixRejectsUndersizedBufferWithoutWritingSamples)
add_test(NAME Audio_UninitializedDeviceOperationsReturnExplicitStatusWithoutMutation COMMAND YuAudioTests Audio_UninitializedDeviceOperationsReturnExplicitStatusWithoutMutation)
add_test(NAME Audio_Mix_DoesNotGrowVoiceStorage COMMAND YuAudioTests Audio_Mix_DoesNotGrowVoiceStorage)
add_test(NAME Audio_DisabledDiagnosticsDoesNotChangeResults COMMAND YuAudioTests Audio_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Audio_NoDeviceCodecResourceScriptUiGameAdapterDependency COMMAND YuAudioTests Audio_NoDeviceCodecResourceScriptUiGameAdapterDependency)

add_executable(YuResourceTests
    tests/resource/ResourceTests.cpp
)
yuengine_apply_compile_options(YuResourceTests)
target_link_libraries(YuResourceTests PRIVATE YuResource)
add_test(NAME Resource_RegisterSyntheticDescriptor_ReturnsGenerationHandle COMMAND YuResourceTests Resource_RegisterSyntheticDescriptor_ReturnsGenerationHandle)
add_test(NAME Resource_RegisterDuplicate_ReturnsExplicitStatus COMMAND YuResourceTests Resource_RegisterDuplicate_ReturnsExplicitStatus)
add_test(NAME Resource_RegistryRejectsCapacityOverflowWithoutMutation COMMAND YuResourceTests Resource_RegistryRejectsCapacityOverflowWithoutMutation)
add_test(NAME Resource_HandleRejectsWrongGeneration COMMAND YuResourceTests Resource_HandleRejectsWrongGeneration)
add_test(NAME Resource_HandleRejectsTypeMismatch COMMAND YuResourceTests Resource_HandleRejectsTypeMismatch)
add_test(NAME Resource_AcquireRelease_TracksReferenceCount COMMAND YuResourceTests Resource_AcquireRelease_TracksReferenceCount)
add_test(NAME Resource_RepeatedAcquire_IncrementsReferenceCount COMMAND YuResourceTests Resource_RepeatedAcquire_IncrementsReferenceCount)
add_test(NAME Resource_AcquireRejectsReferenceCountOverflow COMMAND YuResourceTests Resource_AcquireRejectsReferenceCountOverflow)
add_test(NAME Resource_RetireRejectsOutstandingAcquire COMMAND YuResourceTests Resource_RetireRejectsOutstandingAcquire)
add_test(NAME Resource_RetireRejectsLiveDependentEdge COMMAND YuResourceTests Resource_RetireRejectsLiveDependentEdge)
add_test(NAME Resource_DependencyValidationRejectsMissingDependency COMMAND YuResourceTests Resource_DependencyValidationRejectsMissingDependency)
add_test(NAME Resource_DependencyValidationRejectsCycle COMMAND YuResourceTests Resource_DependencyValidationRejectsCycle)
add_test(NAME Resource_NoFileOrPackageDependency_ForHandleRegistry COMMAND YuResourceTests Resource_NoFileOrPackageDependency_ForHandleRegistry)
add_test(NAME Resource_DisabledDiagnosticsDoesNotChangeResults COMMAND YuResourceTests Resource_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Resource_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuResourceTests Resource_NoHiddenAllocation_UsesYuMemorySignal)

add_executable(YuPackageTests
    tests/package/PackageTests.cpp
)
yuengine_apply_compile_options(YuPackageTests)
target_link_libraries(YuPackageTests PRIVATE YuPackage)
add_test(NAME Package_RegisterSyntheticManifest_ReturnsStableId COMMAND YuPackageTests Package_RegisterSyntheticManifest_ReturnsStableId)
add_test(NAME Package_RegisterDuplicateManifest_ReturnsExplicitStatus COMMAND YuPackageTests Package_RegisterDuplicateManifest_ReturnsExplicitStatus)
add_test(NAME Package_RegisterEntry_ReturnsStableEntryId COMMAND YuPackageTests Package_RegisterEntry_ReturnsStableEntryId)
add_test(NAME Package_RegisterDuplicateEntry_ReturnsExplicitStatus COMMAND YuPackageTests Package_RegisterDuplicateEntry_ReturnsExplicitStatus)
add_test(NAME Package_RegisterDuplicateResourceKey_ReturnsExplicitStatus COMMAND YuPackageTests Package_RegisterDuplicateResourceKey_ReturnsExplicitStatus)
add_test(NAME Package_RegisterInvalidIdsOrType_ReturnsExplicitStatusWithoutMutation COMMAND YuPackageTests Package_RegisterInvalidIdsOrType_ReturnsExplicitStatusWithoutMutation)
add_test(NAME Package_ManifestCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_ManifestCapacityOverflow_DoesNotMutate)
add_test(NAME Package_EntryCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_EntryCapacityOverflow_DoesNotMutate)
add_test(NAME Package_RegisterEntryRejectsOversizedKeysWithoutMutation COMMAND YuPackageTests Package_RegisterEntryRejectsOversizedKeysWithoutMutation)
add_test(NAME Package_RegisterEntryRejectsOversizedByteRangeWithoutMutation COMMAND YuPackageTests Package_RegisterEntryRejectsOversizedByteRangeWithoutMutation)
add_test(NAME Package_ResolveEntryByResourceKey_ReturnsDeterministicLoadPlan COMMAND YuPackageTests Package_ResolveEntryByResourceKey_ReturnsDeterministicLoadPlan)
add_test(NAME Package_ResolveEntryByResourceKey_UsesTypeAndLogicalKeyTuple COMMAND YuPackageTests Package_ResolveEntryByResourceKey_UsesTypeAndLogicalKeyTuple)
add_test(NAME Package_ResolveRejectsUnknownResourceKey COMMAND YuPackageTests Package_ResolveRejectsUnknownResourceKey)
add_test(NAME Package_ResolveRejectsTypeMismatchWithoutMutation COMMAND YuPackageTests Package_ResolveRejectsTypeMismatchWithoutMutation)
add_test(NAME Package_DependencyValidationRejectsMissingEntry COMMAND YuPackageTests Package_DependencyValidationRejectsMissingEntry)
add_test(NAME Package_DependencyValidationRejectsCycle COMMAND YuPackageTests Package_DependencyValidationRejectsCycle)
add_test(NAME Package_DependencyValidationRejectsCycleAfterHighFanout COMMAND YuPackageTests Package_DependencyValidationRejectsCycleAfterHighFanout)
add_test(NAME Package_DependencyPlanPreservesDeclarationOrder COMMAND YuPackageTests Package_DependencyPlanPreservesDeclarationOrder)
add_test(NAME Package_DependencyCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_DependencyCapacityOverflow_DoesNotMutate)
add_test(NAME Package_LoadPlanCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_LoadPlanCapacityOverflow_DoesNotMutate)
add_test(NAME Package_DisabledDiagnosticsDoesNotChangeResults COMMAND YuPackageTests Package_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Package_NoFileReadOriginalPackageOrGameAdapterDependency COMMAND YuPackageTests Package_NoFileReadOriginalPackageOrGameAdapterDependency)
add_test(NAME Package_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuPackageTests Package_NoHiddenAllocation_UsesYuMemorySignal)

add_executable(YuInputTests
    tests/input/InputTests.cpp
)
yuengine_apply_compile_options(YuInputTests)
target_link_libraries(YuInputTests PRIVATE YuInput)
add_test(NAME Input_RegisterActionBinding_ReturnsStableActionId COMMAND YuInputTests Input_RegisterActionBinding_ReturnsStableActionId)
add_test(NAME Input_RegisterControlAlreadyBound_ReturnsDuplicateStatus COMMAND YuInputTests Input_RegisterControlAlreadyBound_ReturnsDuplicateStatus)
add_test(NAME Input_MultipleControlsForOneAction_UsesInsertionOrder COMMAND YuInputTests Input_MultipleControlsForOneAction_UsesInsertionOrder)
add_test(NAME Input_BindingCapacityOverflow_DoesNotMutate COMMAND YuInputTests Input_BindingCapacityOverflow_DoesNotMutate)
add_test(NAME Input_ReplayFrame_AppliesButtonPressAndRelease COMMAND YuInputTests Input_ReplayFrame_AppliesButtonPressAndRelease)
add_test(NAME Input_ReplayFrame_EventOrderIsDeterministic COMMAND YuInputTests Input_ReplayFrame_EventOrderIsDeterministic)
add_test(NAME Input_ReplayFrame_EventOrderLastValidValueWins COMMAND YuInputTests Input_ReplayFrame_EventOrderLastValidValueWins)
add_test(NAME Input_ReplayFrame_PressReleaseSameFrame_SetsChangedFlag COMMAND YuInputTests Input_ReplayFrame_PressReleaseSameFrame_SetsChangedFlag)
add_test(NAME Input_ReplayFrame_AppliesFixedPointAxisValue COMMAND YuInputTests Input_ReplayFrame_AppliesFixedPointAxisValue)
add_test(NAME Input_InvalidAxisValue_ReturnsExplicitStatusWithoutMutation COMMAND YuInputTests Input_InvalidAxisValue_ReturnsExplicitStatusWithoutMutation)
add_test(NAME Input_InvalidEvent_DoesNotMutateReplayOrSnapshot COMMAND YuInputTests Input_InvalidEvent_DoesNotMutateReplayOrSnapshot)
add_test(NAME Input_UnknownDeviceControlOrAction_ReturnsExplicitStatus COMMAND YuInputTests Input_UnknownDeviceControlOrAction_ReturnsExplicitStatus)
add_test(NAME Input_EventCapacityOverflow_DoesNotMutateReplay COMMAND YuInputTests Input_EventCapacityOverflow_DoesNotMutateReplay)
add_test(NAME Input_FrameSnapshot_IsDeterministicAcrossReplay COMMAND YuInputTests Input_FrameSnapshot_IsDeterministicAcrossReplay)
add_test(NAME Input_ResetClearsChangedStateWithoutClearingPressedState COMMAND YuInputTests Input_ResetClearsChangedStateWithoutClearingPressedState)
add_test(NAME Input_DisabledDiagnosticsDoesNotChangeResults COMMAND YuInputTests Input_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Input_FrameApply_DoesNotGrowReplayStorage COMMAND YuInputTests Input_FrameApply_DoesNotGrowReplayStorage)
add_test(NAME Input_NoPlatformUiOrGameAdapterDependency COMMAND YuInputTests Input_NoPlatformUiOrGameAdapterDependency)
